fix: fix itemStack packet